--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div id="emoji" class="emoji">🍀</div>
+    <div id="emoji-selection" class="emoji-selection"></div>
     <div id="date-idea" class="date-idea"></div>
   </div>
   <script src="script.js"></script>
